--- a/packages/axios-stream-adapter/tsconfig.json
+++ b/packages/axios-stream-adapter/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "esnext",
-    "lib": ["esnext", "dom"],
+    "lib": ["esnext", "dom", "dom.iterable"],
     "rootDir": "src",
     "baseUrl": ".",
     "outDir": "dist",
